--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/tests/test.ts",
-    "test": "ts-node src/tests/limiter.test.ts"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/ioredis": "^4.17.10",
+    "@types/jest": "^26.0.19",
     "@types/redis": "^2.8.28",
     "express": "^4.17.1",
     "ioredis": "^4.19.4",
+    "jest": "^26.6.3",
     "redis": "^3.0.2",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
