--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/ioredis": "^4.17.10",
     "@types/jest": "^26.0.19",
     "@types/redis": "^2.8.28",
+    "@types/supertest": "^2.0.10",
     "express": "^4.17.1",
     "ioredis": "^4.19.4",
     "jest": "^26.6.3",
     "redis": "^3.0.2",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
