--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "redis-sliding-rate-limiter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
+    "clean": "rm -fr build",
+    "build": "npm run clean && tsc",
     "test": "jest"
   },
   "keywords": [],
