--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redis-sliding-rate-limiter",
   "version": "1.0.0",
-  "description": "",
+  "description": "Flexible and fast rate limiter compatible ",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
@@ -9,8 +9,14 @@
     "build": "npm run clean && tsc",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spinlud/redis-sliding-rate-limiter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/spinlud/redis-sliding-rate-limiter.git/issues"
+  },
+  "author": "Ludovico Fabbri",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.9",
@@ -27,5 +33,17 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "keywords": [
+    "redis",
+    "ioredis",
+    "rate",
+    "limiter",
+    "throttle",
+    "sliding",
+    "rolling",
+    "window",
+    "express",
+    "middleware"
+  ]
 }
