--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: ci
-on: [push]
+on: [push, workflow_dispatch]
 
 jobs:
   container-job:
@@ -17,15 +17,31 @@ jobs:
           --health-retries 5
 
     steps:
-      # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
         uses: actions/checkout@v2
 
       - name: Install dependencies
         run: npm install
 
+      - name: Build
+        run: npm ruun build
+
       - name: Test
         run: npm run test -- --runInBand
         env:
           REDIS_HOST: redis
           REDIS_PORT: 6379
+
+      - name: Publish
+        uses: pascalgn/npm-publish-action@1.3.6
+        with: # All of theses inputs are optional
+          tag_name: "v%s"
+          tag_message: "v%s"
+          create_tag: "true"
+          commit_pattern: "^Release (\\S+)"
+          workspace: "."
+          publish_command: "yarn"
+          publish_args: "--non-interactive"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
