--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,12 @@ jobs:
           REDIS_HOST: redis
           REDIS_PORT: 6379
 
+      - name: Check version changes
+        uses: EndBug/version-check@v1
+        id: check
+
       - name: Publish
+        if: steps.check.outputs.changed == 'true'
         run: |
           npm set registry "https://registry.npmjs.org"
           npm set //registry.npmjs.org/:_authToken ${{ secrets.NPM_PUBLISH_TOKEN }}
