--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "redis-sliding-rate-limiter",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Flexible and performant rate limiter based on sliding window algorithm with arbitrary precision",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "clean": "rm -fr build",
     "build": "npm run clean && tsc",
-    "test": "jest"
+    "test": "jest src/tests/limiter.test.ts"
   },
   "repository": {
     "type": "git",
@@ -20,18 +20,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/ioredis": "^4.28.9",
     "@types/jest": "^27.4.1",
     "@types/redis": "^4.0.10",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2.0.12",
     "express": "^4.17.3",
-    "ioredis": "^4.28.5",
+    "ioredis": "^5.0.1",
     "jest": "^27.5.1",
     "redis": "^4.0.4",
     "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   },
   "keywords": [
     "redis",
