--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "redis-sliding-rate-limiter",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Flexible and performant rate limiter based on sliding window algorithm with arbitrary precision",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "clean": "rm -fr build",
     "build": "npm run clean && tsc",
-    "test": "jest src/tests/limiter.test.ts"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "url": "https://github.com/spinlud/redis-sliding-rate-limiter.git/issues"
   },
   "author": "Ludovico Fabbri",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
