--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "redis-sliding-rate-limiter",
-  "version": "4.1.1",
+  "version": "5.0.0",
   "description": "Flexible and performant rate limiter based on sliding window algorithm with arbitrary precision",
+  "engines": {
+    "node": ">=12.22.0"
+  },
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "clean": "rm -fr build",
     "build": "npm run clean && tsc",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "repository": {
     "type": "git",
@@ -20,17 +23,17 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^28.1.7",
     "@types/redis": "^4.0.10",
     "@types/supertest": "^2.0.12",
-    "express": "^4.17.3",
-    "ioredis": "^5.0.4",
-    "jest": "^27.5.1",
-    "redis": "^4.0.6",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "express": "^4.18.1",
+    "ioredis": "^5.2.2",
+    "jest": "^28.1.3",
+    "redis": "^4.3.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "keywords": [
     "redis",
